--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "innovationcouncil",
   "version": "0.1.0",
+  "homepage": "https://realhuman101.github.io/innovationcouncil",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "gh-pages": "^6.2.0",
+    "typescript": "^5"
   }
 }
