Add video to background

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "motion": "^11.14.1",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
